--- a/app/project1/webapp/view/VendorMaster.view.xml
+++ b/app/project1/webapp/view/VendorMaster.view.xml
@@ -1,58 +1,55 @@
 <mvc:View
-    controllerName="com.sap.dashboard.controller.VendorMaster"
-    xmlns:mvc="sap.ui.core.mvc"
-    xmlns="sap.m"
-    displayBlock="true">
-    <Page
-        id="vendorPage"
-        title="Vendor Master"
-        showNavButton="true"
-        navButtonPress="onNavBack">
-        <content>
-            <Table
-                id="vendorTable"
-                items="{/VendorMaster}"
-                growing="true"
-                growingThreshold="20"
-                mode="SingleSelectMaster">
-                <headerToolbar>
-                    <OverflowToolbar>
-                        <Title text="Vendors" level="H2"/>
-                        <ToolbarSpacer/>
-                        <SearchField
-                            width="50%"
-                            search="onSearch"
-                            placeholder="Search vendors..."/>
-                        <Button
-                            icon="sap-icon://add"
-                            text="Add Vendor"
-                            press="onAddVendor"
-                            type="Emphasized"/>
-                    </OverflowToolbar>
-                </headerToolbar>
-                <columns>
-                    <Column><Text text="Vendor Code" /></Column>
-                    <Column><Text text="Vendor Name" /></Column>
-                    <Column><Text text="Country" /></Column>
-                    <Column><Text text="City" /></Column>
-                    <Column><Text text="Email" /></Column>
-                    <Column><Text text="Phone" /></Column>
-                    <Column><Text text="Status" /></Column>
-                </columns>
-                <items>
-                    <ColumnListItem type="Navigation" press="onVendorSelect">
-                        <cells>
-                            <Text text="{vendorCode}" />
-                            <Text text="{vendorName}" />
-                            <Text text="{country}" />
-                            <Text text="{city}" />
-                            <Text text="{email}" />
-                            <Text text="{phone}" />
-                            <ObjectStatus text="{status}" state="{= ${status} === 'Active' ? 'Success' : 'Error'}" />
-                        </cells>
-                    </ColumnListItem>
-                </items>
-            </Table>
-        </content>
-    </Page>
+  controllerName="com.sap.dashboard.controller.VendorMaster"
+  xmlns:mvc="sap.ui.core.mvc"
+  xmlns="sap.m"
+  displayBlock="true">
+
+  <Page
+    title="Vendor Master"
+    showNavButton="true"
+    navButtonPress="onNavBack">
+
+    <content>
+      <Table
+        id="vendorTable"
+        items="{/VendorMaster}"
+        mode="SingleSelectMaster"
+        growing="true">
+
+        <headerToolbar>
+          <OverflowToolbar>
+            <Title text="Vendors" level="H2"/>
+            <ToolbarSpacer/>
+
+            <Button text="Create" icon="sap-icon://add" press="onCreate"/>
+            <Button text="Edit" icon="sap-icon://edit" press="onEdit"/>
+            <Button text="Delete" icon="sap-icon://delete" type="Negative" press="onDelete"/>
+          </OverflowToolbar>
+        </headerToolbar>
+
+        <columns>
+          <Column><Text text="Code"/></Column>
+          <Column><Text text="Name"/></Column>
+          <Column><Text text="Country"/></Column>
+          <Column><Text text="City"/></Column>
+          <Column><Text text="Email"/></Column>
+          <Column><Text text="Phone"/></Column>
+        </columns>
+
+        <items>
+          <ColumnListItem>
+            <cells>
+              <Text text="{vendorCode}"/>
+              <Text text="{vendorName}"/>
+              <Text text="{country}"/>
+              <Text text="{city}"/>
+              <Text text="{email}"/>
+              <Text text="{phone}"/>
+            </cells>
+          </ColumnListItem>
+        </items>
+
+      </Table>
+    </content>
+  </Page>
 </mvc:View>
